[package]
name = "bft-json-crdt"
version = "0.1.0"
edition = "2021"

[features]
logging = []

[dependencies]
colored = "2.0.0"
ed25519-dalek = "1.0.1"
rand = "0.7.0"
random_color = "0.6.1"
sha2 = "0.10.6"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
time = "0.1"
