[package]
name = "bft-json-crdt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib","cdylib"]

[features]
default = ["bft"]
logging = []
bft = []

[dependencies]
bft-crdt-derive = { path = "bft-crdt-derive" }
colored = "2.0.0"
fastcrypto = "0.1.3"
itertools = "0.10.5"
rand = "0.8.5"
random_color = "0.6.1"
sha2 = "0.10.6"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
time = "0.1"
